# mas_cpp_misc

./: .clangd  .gitignore  .gitmodules
climate/: CMakeLists.txt  climate-common.cpp  climate-common.h  climate-file-io.cpp
climate/climate/: CMakeLists.txt
climate/climate-common/: CMakeLists.txt
climate/climate-file-io/: CMakeLists.txt
common/: CMakeLists.txt  CMakePresets.json  PortConnector.cpp  PortConnector.h  channel-main.cpp  channel.cpp  channel.h  gateway-main.cpp  gateway.cpp  gateway.h  host-port-resolver-main.cpp  host-port-resolver.cpp  ports.cpp  ports.h  restorable-service-main.cpp  restorable-service-main.h  restorer.cpp  restorer.h  rpc-connection-manager.cpp  rpc-connection-manager.h  storage-service-main.cpp  storage-service.cpp  storage-service.sqlite  storage_service.sqlite
db/: CMakeLists.txt
db/db/: CMakeLists.txt
db/sqlite3/: CMakeLists.txt
json11/: CMakeLists.txt  json11-helper.h  json11.cpp
soil/: CMakeLists.txt  soil.cpp  soil.h
toml/: CMakeLists.txt
tools/: CMakeLists.txt  algorithms.cpp  algorithms.h  date.cpp  date.h  helper.cpp  helper.h
tools/date/: CMakeLists.txt
tools/debug/: CMakeLists.txt
tools/helpers/: CMakeLists.txt
tools/read-ini/: CMakeLists.txt
zeromq/: CMakeLists.txt
